<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/table_name_title"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:fontFamily="sans-serif"
        android:text="@string/table_name_sample"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/table_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sample"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif"
        android:text="@string/table_name_label"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/table_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_name_label"
        android:hint="@string/table_name_label"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLength="10"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/tutorial_margin_bottom"
        android:backgroundTint="@color/button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tutorial_button"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />
</RelativeLayout>