<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    tools:context="com.sharpay.home.HomeActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/message"
        android:fontFamily="sans-serif-medium"
        android:text="@string/home_name"
        android:textColor="@color/white_transparent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/home_message"
        android:textColor="@android:color/white"
        android:textSize="32sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/home_margin_bottom"
        android:fontFamily="sans-serif-medium"
        android:text="@string/home_button"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:backgroundTint="@color/button_selector" />

</RelativeLayout>
